test/files/neg/t6593.scala

trait T {
  def f(s: String) = s.exists(_ == "")
}
