test/files/neg/t6593.check
t6593.scala:3: warning: comparing values of types Char and String using `==' will always yield false
  def f(s: String) = s.exists(_ == "")
                                ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
